--- a/src/styles/components/editor/_util.scss
+++ b/src/styles/components/editor/_util.scss
@@ -5,14 +5,18 @@
     width: 320px !important;
     .b3-form__space--small {
       display: flex;
+      margin: 8px 12px;
       flex-direction: row;
-      input:first-child {
-        display: flex;
+      .fn__flex:first-child {
         margin-right: 12px;
+        flex: 4;
+      }
+      .ft__on-surface,.fn__space{
+        display: none;
       }
       .fn__hr {
         display: none;
-        + input {
+        + .fn__flex:not(:last-child) {
           display: none;
         }
       }
@@ -42,8 +46,8 @@
   //代码块选择语言
   .b3-list{
     min-width: 240px;
-    .b3-list-item{
-      text-transform: capitalize;
-    }
+    // .b3-list-item{
+    //   text-transform: capitalize;
+    // }
   }
 }
