--- a/src/styles/components/surface/_list.scss
+++ b/src/styles/components/surface/_list.scss
@@ -7,7 +7,9 @@
     padding: 0 8px;
     // background-color: #fff;
   }
-
+  &.b3-menu {
+    padding-top: 8px;
+  }
   .b3-list-item {
     height: auto;
     border-radius: 0.375rem;
@@ -73,6 +75,9 @@
         svg {
           margin: ($list-text-height - 14px)/2;
         }
+        &::after {
+          display: none;
+        }
       }
       .b3-list-item__text {
         margin-top: 1.5px;
@@ -90,31 +95,28 @@
         &:hover {
           background-color: $rc-theme-list-button;
         }
+        &::after {
+          display: none;
+        }
         + .fn__space {
           display: none;
         }
       }
       .counter {
         @extend %counter__model;
+        &::after {
+          display: none;
+        }
       }
-      + ul > .b3-list-item {
-        margin-left: $list-left * 1 !important;
+      @mixin recursive-item-margin($cur, $end) {
         + ul > .b3-list-item {
-          margin-left: $list-left * 2 !important;
-          + ul > .b3-list-item {
-            margin-left: $list-left * 3 !important;
-            + ul > .b3-list-item {
-              margin-left: $list-left * 4 !important;
-              + ul > .b3-list-item {
-                margin-left: $list-left * 5 !important;
-                + ul > .b3-list-item {
-                  margin-left: $list-left * 6 !important;
-                }
-              }
-            }
+          margin-left: $list-left * $cur !important;
+          @if $cur < $end {
+            @include recursive-item-margin($cur + 1, $end);
           }
         }
       }
+      @include recursive-item-margin(1, $list-depth);
     }
   }
 }
