--- a/src/styles/components/editor/_cover.scss
+++ b/src/styles/components/editor/_cover.scss
@@ -103,7 +103,7 @@
 //文档标题
 .protyle-title {
   margin: 0 #{$content-margin} !important;
-  max-width: $rc-editor-width;
+  max-width: #{$rc-editor-width};
   &:hover .protyle-title__icon {
     opacity: 0.6;
   }
