--- a/src/styles/components/_surface.scss
+++ b/src/styles/components/_surface.scss
@@ -126,3 +126,33 @@
 ::selection {
   background-color: $rc-selection-color;
 }
+
+.protyle-img {
+  left: 30px;
+  right: 30px;
+  top: 30px;
+  bottom: 30px;
+  .protyle-img__bar {
+    top: 40px;
+    right: 45px;
+    .b3-button {
+      color: rgba($rc-theme-on-background, 0.7);
+      background-color: $rc-dialog-close-background;
+      border: 1px solid transparent;
+      user-select: none;
+      &:hover {
+        color: rgba($rc-theme-on-background, 0.7);
+        background-color: $rc-dialog-close-hover !important;
+      }
+      svg {
+        width: 10px;
+        height: 10px;
+      }
+    }
+  }
+  img {
+    width: 100%;
+    // height: 100%;
+    // transform: translate3d(0, 0, 0px) !important;
+  }
+}
