--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -147,11 +147,11 @@
   --b3-protyle-inline-strong-color: #202124;
   --b3-protyle-inline-em-color: #202124;
   --b3-protyle-inline-s-color: #202124;
-  --b3-protyle-inline-link-color: #4285f4;
+  --b3-protyle-inline-link-color: #{$rc-inline-link-color};
   --b3-protyle-inline-mark-background: #{$rc-mark-background};
   --b3-protyle-inline-mark-color: #202124;
-  --b3-protyle-inline-tag-color: #5f6368;
-  --b3-protyle-inline-blockref-color: #660e7a;
+  --b3-protyle-inline-tag-color: #{$rc-inline-tag-color};
+  --b3-protyle-inline-blockref-color: #{$rc-inline-blockref-color};
 
   /* PDF */
   --b3-pdf-sidebar-width: 200px;
