--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -32,7 +32,7 @@
   --b3-theme-on-error: #fff;
 
   // 字体
-  --b3-font-family: "quote", "HarmonyOS Sans SC", "JetBrains Mono",
+  --b3-font-family: "HarmonyOS Sans SC", "JetBrains Mono",
     "Helvetica Neue", "Luxi Sans", "DejaVu Sans", "Hiragino Sans GB",
     "Microsoft Yahei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
