Squashed commit of the following:
commit c07f033a6c0cdf246339b5a9d1566b13f5ada92e
Author: Seven Chor <hjlcarl@163.com>
Date:   Sun Jan 16 19:59:10 2022 +0800

    暂存

commit c884bcf8df4af98b05af83cb9763cb6821b36ef8
Author: Seven Chor <hjlcarl@163.com>
Date:   Sun Jan 16 14:46:14 2022 +0800

    暂存

commit 899bc315cfed8f3f89b58934cac604c33c61ca0a
Author: Seven Chor <hjlcarl@163.com>
Date:   Sun Jan 16 03:32:59 2022 +0800

    暂存

--- a/src/styles/components/_editor.scss
+++ b/src/styles/components/_editor.scss
@@ -18,6 +18,8 @@
 @import "editor/link";
 //标签
 @import "editor/tag";
+//块嵌入
+@import "editor/embed";
 
 //提示语
 .protyle-title__input--untitled::after {
@@ -98,15 +100,6 @@ kbd {
   font-weight: 600;
 }
 
-//块嵌入
-div[data-type="NodeBlockQueryEmbed"].render-node {
-  background-color: rgb(247, 247, 247) !important;
-  padding: 8px 28px 8px 12px !important;
-  border-radius: $rc-border-radius-small;
-  &.protyle-wysiwyg--hl {
-    background-color: $rc-highlight !important;
-  }
-}
 
 //行内公式块
 span[data-type="inline-math"] {
@@ -183,10 +176,10 @@ mark {
   background-color: $rc-theme-surface-background !important;
 }
 
-p,
-.p {
-  text-align: justify;
-}
+// p,
+// .p {
+//   text-align: justify;
+// }
 
 // .protyle-content{
 //   padding-top: 35px;
