--- a/src/styles/components/surface/_block-icons.scss
+++ b/src/styles/components/surface/_block-icons.scss
@@ -1,7 +1,6 @@
 //面板上按钮
 .block__icons {
-  font-size: 15px;
-  font-weight: 500;
+  // font-size: 15px;
   color: $rc-theme-text-0;
   &--active {
     background-color: var(--b3-theme-surface);
