--- a/src/styles/components/surface/_dialog.scss
+++ b/src/styles/components/surface/_dialog.scss
@@ -75,7 +75,7 @@
         // transform: translateY(45.4px);
         img {
           object-fit: cover !important;
-          // border-radius: $rc-border-radius-small;
+          border-radius: $rc-border-radius-small;
         }
       }
       .b3-card__info {
