--- a/src/styles/components/editor/_heading.scss
+++ b/src/styles/components/editor/_heading.scss
@@ -1,19 +1,53 @@
-@function avg-interval($max, $min, $num, $index) {
-  $interval: calc((#{$max} - #{$min}) / (#{$num} - 1));
-  $result: calc(#{$max} - #{$interval} * (#{$index} - 1));
+@function avg-fs($max, $min, $index) {
+  // @if $index == 1 {
+  //   @return $max;
+  // }
+  // @if $index == 2 {
+  //   @return $max;
+  // }
+  // @if $index == 3 {
+  //   @return $max - 8px;
+  // }
+  // @if $index == 4 {
+  //   @return $max - 8px;
+  // }
+  // @if $index == 5 {
+  //   @return $min;
+  // }
+  @if $index == 6 {
+    @return $min;
+  }
+  $interval: calc(($max - $min) * ($index - 1) / 4);
+  $result: calc(#{$max} - #{$interval});
   @return $result;
 }
+
 $max-fs: 30px;
 $min-fs: 16px;
-$max-mt: 42px;
-$min-mt: 24px;
-$max-mb: 12px;
-$min-mb: 4px;
 
-@mixin heading($num, $index) {
-  font-size: avg-interval($max-fs, $min-fs, $num, $index);
-  margin-top: avg-interval($max-mt, $min-mt, $num, $index);
-  margin-bottom: avg-interval($max-mb, $min-mb, $num, $index);
+@mixin heading($index) {
+  font-size: avg-fs($max-fs, $min-fs, $index);
+  margin-top: 1.2em;
+  margin-bottom: 0.5em;
+  @if $index == 1 {
+    line-height: 1.23;
+  }
+  @if $index == 2 {
+    line-height: 1.35;
+  }
+  @if $index == 3 {
+    line-height: 1.35;
+  }
+
+  @if $index == 4 {
+    line-height: 1.4;
+  }
+  @if $index == 5 {
+    line-height: 1.5;
+  }
+  @if $index == 6 {
+    line-height: 1.5;
+  }
 }
 
 .b3-typography,
@@ -26,12 +60,11 @@ $min-mb: 4px;
     h#{$i},
     .h#{$i} {
       color: $rc-theme-text-0;
-      line-height: 1.2;
       white-space: pre-wrap;
       word-break: break-word;
-      padding-top: 5px;
-      padding-bottom: 5px;
-      @include heading(6, $i);
+      padding-top: 2px;
+      padding-bottom: 2px;
+      @include heading($i);
       [spellcheck="false"] {
         min-height: 0;
       }
