--- a/src/styles/components/surface/_scroller.scss
+++ b/src/styles/components/surface/_scroller.scss
@@ -10,7 +10,7 @@
 }
 ::-webkit-scrollbar-thumb {
   border-radius: $rc-border-radius-large;
-  box-shadow: inset 0 0 10px 10px $rc-scroll-color;
+  box-shadow: inset 0 0 10px 10px $rc-scroll-hover;
   background: unset;
   border: solid 4px transparent;
 }
