--- a/src/styles/components/_editor.scss
+++ b/src/styles/components/_editor.scss
@@ -106,7 +106,7 @@ span[data-type="inline-math"] {
   margin: 0 3px;
   .katex {
     font-size: 100% !important;
-    font-family: KaTeX_Main, HarmonyOS Sans SC, Times New Roman, serif !important;
+    font-family: KaTeX_Math, HarmonyOS Sans SC, Times New Roman, serif !important;
   }
 }
 
