--- a/src/styles/components/surface/_menu.scss
+++ b/src/styles/components/surface/_menu.scss
@@ -20,6 +20,7 @@
     height: 31.2px;
     min-width: 0px;
     padding: 8px;
+    font-weight: normal !important;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
